examples/istio/test-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  labels:
    app: hello-world
    service: hello-world
spec:
  ports:
    - port: 5000
      targetPort: 5678
      name: http
  selector:
    app: hello-world
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-v1
  labels:
    app: hello-world
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
      version: v1
  template:
    metadata:
      labels:
        app: hello-world
        version: v1
    spec:
      serviceAccountName: hello-world
      containers:
        - name: hello-world
          image: hashicorp/http-echo
          args:
            - "-text=hello from version 1"
          ports:
            - containerPort: 5678
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-v2
  labels:
    app: hello-world
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
      version: v2
  template:
    metadata:
      labels:
        app: hello-world
        version: v2
    spec:
      serviceAccountName: hello-world
      containers:
        - name: hello-world
          image: hashicorp/http-echo
          args:
            - "-text=hello from version 2"
          ports:
            - containerPort: 5678
